# password-reminder

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  values.yaml
config/: notifications.yaml  settings_test.yaml
deploy/: inventory_prod.yaml  requirements.yaml
scripts/: purge_db.py  solo_modules.py
src/: active_directory.py  config.py  externaldb.py  main.py  metrics.py  utils.py
src/database/: __init__.py  db_utils.py  models.py
src/notification/: mailsender.py  notificator.py  portalsender.py
tests/: conftest.py  test_senders.py
